# Homeworks

./: .gitignore  .gitmodules  README.md  main.cpp
homework_1/: CMakeLists.txt  homework_1.cpp  version.h.in
homework_1/.github/workflows/: ci.yaml
tests/: test_version.cpp
